Added BankTabNames Plugin

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
-support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Bank Tab Names
+author=psyda
+support=https://github.com/Psyda/bank-tab-names
+description=Customize your bank tabs with custom styled names
+tags=nickname,custom,edit,psyda
+plugins=psyda.banktabnames.BankTabNamesPlugin
