--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -2,5 +2,5 @@ displayName=Bank Tab Names
 author=psyda
 support=https://github.com/Psyda/bank-tab-names
 description=Customize your bank tabs with custom styled names
-tags=nickname,custom,edit,psyda
+tags=bank,tab,name,custom,edit,psyda
 plugins=psyda.banktabnames.BankTabNamesPlugin
